Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Abogado__c.field-meta.xml
<CustomField>
    <fullName>CI_Abogado__c</fullName>
    <label>Abogado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>