Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Antig_Anios__c.field-meta.xml
<CustomField>
    <fullName>CI_Antig_Anios__c</fullName>
    <label>Antig. Años</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>