Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_AntigActAnios__c.field-meta.xml
<CustomField>
    <fullName>CI_AntigActAnios__c</fullName>
    <label>Antig./Act. Años</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>