Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_AntigActMeses__c.field-meta.xml
<CustomField>
    <fullName>CI_AntigActMeses__c</fullName>
    <label>Antig./Act. Meses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>