Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Apd_por__c.field-meta.xml
<CustomField>
    <fullName>CI_Apd_por__c</fullName>
    <label>Apd por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
            </value>
            <value>
                <fullName>Compañía</fullName>
            </value>
            <value>
                <fullName>Representante Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>