Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Canal_Captacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Canal_Captacion__c</fullName>
    <label>Canal de Captación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>OFICINA  PLAZA  QUIL</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>OBRA</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>ISLA SUR</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>ISLA ROTONDA</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>REFERIDO</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>WEB</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>PUBLICIDAD</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>FERIA</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>RIOCENTRO NORTE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>OTROS</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>ISLA MALL DEL SOL</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>VISITAS A EMPRESAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>