Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CI_Contacto__c</fullName>
    <label>Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>PRESENCIAL</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>TELÉFONO</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>INTERNET</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>