Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Dir_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>CI_Dir_Trabajo__c</fullName>
    <label>Dirección Trabajo</label>
    <type>TextArea</type>
</CustomField>