Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CI_Empresa__c</fullName>
    <label>Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>