Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>CI_Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASADO</fullName>
            </value>
            <value>
                <fullName>SOLTERO</fullName>
            </value>
            <value>
                <fullName>DIVORCIADO</fullName>
            </value>
            <value>
                <fullName>VIUDO</fullName>
            </value>
            <value>
                <fullName>UNIÓN LIBRE</fullName>
            </value>
            <value>
                <fullName>CASADO SEPARACIÓN BIENES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>