Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Ext_Tel_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>CI_Ext_Tel_Trabajo__c</fullName>
    <label>Extensión Teléfono Trabajo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>