Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Fecha_apost__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_apost__c</fullName>
    <label>Fecha apostillado</label>
    <type>Date</type>
</CustomField>