Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Genero__c.field-meta.xml
<CustomField>
    <fullName>CI_Genero__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Masculino</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Femenino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>