Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Identificacion__c</fullName>
    <label>Identificación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>