Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Medio__c.field-meta.xml
<CustomField>
    <fullName>CI_Medio__c</fullName>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>EL UNIVERSO, CLASIFICADOS</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>TV.</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>MAIL</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>REFERIDOS</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>RADIO</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>EL UNIVERSO, LA REVISTA</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>GOOGLE</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>EL TELÉGRAFO</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>FACEBOOK</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>REVISTA HOGAR</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>REVISTA VISTAZO</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>REVISTA MARIELA</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>REVISTA BIENES RAÍCES</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CINE</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>VALLAS</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>PLUSVALIA.com</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>MAILS</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>FERIA HABITAT</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>FERIA BIESS</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>ISLA MALL DEL SOL</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>VISITAS A EMPRESAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>