Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>CI_Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>