Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Notaria__c.field-meta.xml
<CustomField>
    <fullName>CI_Notaria__c</fullName>
    <label>Notaría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>