Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Parentesco__c.field-meta.xml
<CustomField>
    <fullName>CI_Parentesco__c</fullName>
    <label>Parentesco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>