Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_PEP__c.field-meta.xml
<CustomField>
    <fullName>CI_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Políticamente Expuesto PEP</label>
    <type>Checkbox</type>
</CustomField>