Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Tel_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_Trabajo__c</fullName>
    <label>Teléfono Trabajo</label>
    <type>Phone</type>
</CustomField>