Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Tipo_Poder__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Poder__c</fullName>
    <label>Tipo de Poder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Especial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>