Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Tipo_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Trabajo</label>
    <referenceTo>Tipo_de_Trabajo__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>