Inmob-Salesforce/force-app/main/default/objects/Contact/fields/CI_Tipo_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Vivienda__c</fullName>
    <label>Tipo de Vivienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>ARRENDADA</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>VIVE CON FAMILIARES</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>HIPOTECADA</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>PROPIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>