Inmob-Salesforce/force-app/main/default/objects/Contact/recordTypes/Apoderado_Legal.recordType-meta.xml
<RecordType>
    <fullName>Apoderado_Legal</fullName>
    <active>true</active>
    <label>Apoderado Legal</label>
</RecordType>