Inmob-Salesforce/force-app/main/default/objects/Contact/recordTypes/Contacto.recordType-meta.xml
<RecordType>
    <fullName>Contacto</fullName>
    <active>true</active>
    <label>Contacto</label>
</RecordType>