Inmob-Salesforce/force-app/main/default/objects/Contact/recordTypes/Informacion_Adicional.recordType-meta.xml
<RecordType>
    <fullName>Informacion_Adicional</fullName>
    <active>true</active>
    <label>Información Adicional</label>
</RecordType>